update correct/incorrect animations to work on Safari iPhone

--- a/src/user/game/index.css
+++ b/src/user/game/index.css
@@ -38,27 +38,27 @@
 }
 
 @keyframes game__animation {
-  from { opacity: 1; }
-  to { opacity: 0 }
+  0% { opacity: 1; }
+  100% { opacity: 0 }
 }
-.game__answer-wrapper--correct::after {
+.game__answer-correct {
   animation: 1s ease-out game__animation;
   border-radius: 20px;
   box-shadow: 0px 0px 10px 5px rgb(var(--green));
-  content: '';
   height: 100%;
   left: 0;
+  opacity: 0;
   position: absolute;
   top: 0;
   width: 100%;
 }
-.game__answer-wrapper--incorrect::after {
+.game__answer-incorrect {
   animation: 1s ease-out game__animation;
   border-radius: 20px;
   box-shadow: 0px 0px 10px 5px rgb(var(--red));
-  content: '';
   height: 100%;
   left: 0;
+  opacity: 0;
   position: absolute;
   top: 0;
   width: 100%;
